added maxIsoscelesTriangleS class, fillTriangles, getmaxisIsoscelesTriangleS methods in maxIsoscelesTriangleS, getS method in Triangle